Refactor layout and icons

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "products-list",
+    "name": "Products List",
     "slug": "products-list",
     "version": "1.0.0",
     "orientation": "portrait",
